<resources>
    <string name="app_name">Pearl</string>
    <string name="username_label">Username</string>
    <string name="firstname_label">First Name</string>
    <string name="lastname_label">Last Name</string>
    <string name="password_label">Password</string>
    <string name="email_label">Email</string>
    <string name="phone_label">Phone</string>
    <string name="address_label">Address</string>
    <string name="signin">Sign In</string>
    <string name="next">Next</string>
    <string name="akun_baru">Buat Akun Baru</string>
    <string name="reservation">Reservation</string>
    <string name="detail">Detail</string>


</resources>