<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout_white"
    tools:context=".RegisterOne">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:background="@drawable/second_header_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewregis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayoutregisone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/btn_back"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:background="@drawable/bg_header_first"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/button_back"
                        android:layout_width="30dp"
                        android:layout_height="59dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="28dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="18dp"
                            android:src="@drawable/ic_back_header" />


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/logo_bar"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginRight="55dp"
                        android:src="@drawable/logoheader" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/notoserifbold"
                    android:text="Create New Account"
                    android:textAlignment="center"
                    android:textColor="@color/darkPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/notoseriflight"
                    android:text="Please fill up the forms below"
                    android:textAlignment="center"
                    android:textColor="@color/darkPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/notoseriflight"
                    android:text="for informations"
                    android:textAlignment="center"
                    android:textColor="@color/darkPrimary"
                    android:textSize="20sp" />


                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_layout_whitegreen"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView3">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/notoserifthin"
                            android:text="@string/username_label"
                            android:textColor="@color/darkPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/username"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input_edit"
                            android:fontFamily="@font/notoserifthin"
                            android:inputType="text"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/notoserifthin"
                            android:text="@string/password_label"
                            android:textColor="@color/darkPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/password"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input_edit"
                            android:fontFamily="@font/notoserifthin"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/notoserifthin"
                            android:text="@string/email_label"
                            android:textColor="@color/darkPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input_edit"
                            android:fontFamily="@font/notoserifthin"
                            android:inputType="textEmailAddress"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/notoserifthin"
                            android:text="@string/phone_label"
                            android:textColor="@color/darkPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/phone"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input_edit"
                            android:fontFamily="@font/notoserifthin"
                            android:inputType="number"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/button_next"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/btn_green_primary"
                        android:fontFamily="@font/notoserifregular"
                        android:textAllCaps="false"
                        android:text="@string/next"
                        android:textColor="#FFF"
                        android:textSize="25sp" />

                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>