<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout_green"
    tools:context=".Login">

    <ScrollView
        android:id="@+id/scrollViewsignin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayoutsignin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="50dp"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="match_parent"
                    android:layout_height="102dp"
                    android:layout_marginTop="68dp"
                    android:src="@drawable/logologin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:background="@drawable/bg_layout_white"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/notoserifthin"
                            android:text="@string/username_label"
                            android:textColor="@color/darkPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/xusername"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input_edit"
                            android:fontFamily="@font/notoserifthin"
                            android:inputType="text"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="24dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/notoserifthin"
                            android:text="@string/password_label"
                            android:textColor="@color/darkPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/xpassword"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input_edit"
                            android:fontFamily="@font/notoserifthin"
                            android:inputType="textPassword"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/btn_green_primary"
                        android:fontFamily="@font/notoserifregular"
                        android:textAllCaps="false"
                        android:text="Login"
                        android:textColor="#FFF"
                        android:textSize="25sp" />

                </LinearLayout>

                <TextView
                    android:id="@+id/btn_new_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="44dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="20dp"
                    android:fontFamily="@font/notoserifregular"
                    android:text="@string/akun_baru"
                    android:textAlignment="center"
                    android:textColor="#FFF"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>