<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_layout_white"
    tools:context=".RegisterTwo">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="254dp"
        android:background="@drawable/second_header_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollViewregis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/view">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/linearLayoutregistwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:id="@+id/btn_back"
                    android:layout_width="match_parent"
                    android:layout_height="59dp"
                    android:background="@drawable/bg_header_first"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <LinearLayout
                        android:id="@+id/button_back"
                        android:layout_width="30dp"
                        android:layout_height="59dp"
                        android:layout_marginLeft="18dp"
                        android:layout_marginRight="10dp"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="30dp"
                            android:layout_height="28dp"
                            android:layout_marginTop="18dp"
                            android:layout_marginBottom="18dp"
                            android:src="@drawable/ic_back_header" />


                    </LinearLayout>

                    <ImageView
                        android:id="@+id/logo_bar"
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_marginRight="55dp"
                        android:src="@drawable/logoheader" />

                </LinearLayout>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/notoserifbold"
                    android:text="Create New Experience"
                    android:textAlignment="center"
                    android:textColor="@color/darkPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:fontFamily="@font/notoseriflight"
                    android:text="Let the world knows yourself"
                    android:textAlignment="center"
                    android:textColor="@color/darkPrimary"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="@font/notoseriflight"
                    android:text="more better and ever"
                    android:textAlignment="center"
                    android:textColor="@color/darkPrimary"
                    android:textSize="20sp" />

                <LinearLayout
                    android:id="@+id/linearLayoutregissecond"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginEnd="24dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/bg_layout_whitegreen"
                    android:orientation="vertical"
                    android:paddingTop="30dp"
                    android:paddingBottom="30dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/linearLayoutregistwo">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/notoserifthin"
                            android:text="@string/firstname_label"
                            android:textColor="@color/darkPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/firstname"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input_edit"
                            android:fontFamily="@font/notoserifthin"
                            android:inputType="text"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/notoserifthin"
                            android:text="@string/lastname_label"
                            android:textColor="@color/darkPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/lastname"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:background="@drawable/bg_input_edit"
                            android:fontFamily="@font/notoserifthin"
                            android:inputType="text"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="24dp"
                        android:layout_marginRight="24dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="12dp"
                            android:fontFamily="@font/notoserifthin"
                            android:text="@string/address_label"
                            android:textColor="@color/darkPrimary"
                            android:textSize="20sp" />

                        <EditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="90dp"
                            android:background="@drawable/bg_input_edit"
                            android:fontFamily="@font/notoserifthin"
                            android:inputType="text"
                            android:lines="1"
                            android:paddingLeft="12dp"
                            android:textColor="@color/blackPrimary" />

                    </LinearLayout>

                    <Button
                        android:id="@+id/button_next"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:layout_marginLeft="24dp"
                        android:layout_marginTop="115dp"
                        android:layout_marginRight="24dp"
                        android:background="@drawable/btn_green_primary"
                        android:fontFamily="@font/notoserifregular"
                        android:textAllCaps="false"
                        android:text="@string/next"
                        android:textColor="#FFF"
                        android:textSize="25sp" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:id="@+id/view2"
                android:layout_width="108dp"
                android:layout_height="108dp"
                android:layout_marginTop="570dp"
                android:background="@drawable/bg_view_circle_picture"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayoutregistwo" />

            <com.github.florent37.shapeofview.shapes.CircleView
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:layout_marginTop="580dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/linearLayoutregistwo">

                <ImageView
                    android:id="@+id/pic_regis"
                    android:layout_width="90dp"
                    android:layout_height="90dp"
                    android:src="@drawable/icon_nopic"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/linearLayoutregistwo" />

            </com.github.florent37.shapeofview.shapes.CircleView>

            <Button
                android:id="@+id/btn_add_photo"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="640dp"
                android:background="@drawable/bg_btn_plusgreen"
                android:fontFamily="@font/notoserifbold"
                android:text="+"
                android:textColor="#94D3AC"
                android:textSize="28sp"
                app:layout_constraintStart_toEndOf="@+id/view2"
                app:layout_constraintTop_toTopOf="@+id/linearLayoutregistwo" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>